@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-16T08:23:17Z",
+  "timestamp" : "2022-10-17T02:03:40Z",
   "count_outdated" : 399,
   "uniques_outdated" : 216,
-  "count" : 413,
+  "count" : 414,
   "uniques" : 226,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
