@@ -1,3 +1,11 @@
+2022-10-17T02:03:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3261841156 # 527
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 216 399 / 226 413
+* notice: next accum: outdated-unq outdated-all / unq all: 216 399 / 226 414
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-16]
+
 2022-10-16T08:23:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258805762 # 525
 * notice: last 14d: unq all: 2 14
